--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,4 @@ langchain
 openai
 spacy
 pytesseract
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.0.0/en_core_web_sm-3.0.0-py3-none-any.whl
