--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 langchain
+langchain_community
 openai
 spacy
 pytesseract
-spacy>=3.0.0,<4.0.0
+spacy>=3.7.0,<4.0.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+numpy==1.26.4
