--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     image: streamlit
     container_name: cybershield
-    command: bash -c "fastapi run ./mcp_server/app.py& && streamlit run app.py server.port=8501 --server.address=0.0.0.0"
+    command: bash -c "streamlit run app.py server.port=8501 --server.address=0.0.0.0"
     volumes:
       - ..:/usr/src
     ports:
